--- a/Session3/pom.xml
+++ b/Session3/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-
     <groupId>com.accenture.training</groupId>
     <artifactId>jsf-flows-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Java EE 7 Sample: jsf - flows-app</name>
+    <name>Java EE 7 Sample</name>
     <properties>
         <java.min.version>1.7</java.min.version>
         <maven.min.version>3.0.0</maven.min.version>
@@ -75,12 +73,7 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.javaee7</groupId>
-            <artifactId>test-utils</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    
+		
         <!-- The Java EE 7 API, which is the main and only API which this project is
              providing samples for.
          -->
