--- a/SpringBoot/gs-rest-interface/pom.xml
+++ b/SpringBoot/gs-rest-interface/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>javax.persistence</groupId>
+		    <artifactId>persistence-api</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.ejb</groupId>
+		    <artifactId>ejb-api</artifactId>
+		    <version>3.0</version>
+		</dependency>		
     </dependencies>
 
     <properties>
